--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -123,13 +123,16 @@
 
 body {
   @apply overscroll-none bg-transparent;
+  margin: 1%;
 }
 
 :root {
   --font-sans: var(--font-inter);
   --header-height: calc(var(--spacing) * 12 + 1px);
 }
-
+a {
+  text-decoration: none;
+}
 .theme-scaled {
   @media (min-width: 1024px) {
     --radius: 0.6rem;
@@ -151,12 +154,12 @@ body {
 
 .theme-default,
 .theme-default-scaled {
-  --primary: var(--color-neutral-600);
-  --primary-foreground: var(--color-neutral-50);
+  --primary: var(--color-amber-600);
+  --primary-foreground: var(--color-amber-50);
 
   @variant dark {
-    --primary: var(--color-neutral-500);
-    --primary-foreground: var(--color-neutral-50);
+    --primary: var(--color-amber-500);
+    --primary-foreground: var(--color-amber-50);
   }
 }
 
@@ -244,17 +247,50 @@ body {
 
 .product-icon {
   color: #fff;
-  position: absolute;
-  top: 10px;
-  right: 10px;
   font-size: 14px;
   background-color: #f37b00;
   border-radius: 25px;
   width: 20px;
   height: 20px;
-  margin: 0 auto;
+  margin: -7px 0 10px -5px;
   font-weight: bold;
 }
 Button {
   cursor: pointer;
 }
+
+.hero::after {
+  background: rgb(36, 29, 0);
+  background: -moz-linear-gradient(
+    90deg,
+    rgba(36, 29, 0, 1) 10%,
+    rgba(89, 77, 35, 0.47102591036414565) 72%,
+    rgba(0, 212, 255, 0.35898109243697474) 99%
+  );
+  background: -webkit-linear-gradient(
+    90deg,
+    rgba(36, 29, 0, 1) 10%,
+    rgba(89, 77, 35, 0.47102591036414565) 72%,
+    rgba(0, 212, 255, 0.35898109243697474) 99%
+  );
+  background: linear-gradient(
+    90deg,
+    rgba(36, 29, 0, 1) 10%,
+    rgba(89, 77, 35, 0.47102591036414565) 72%,
+    rgba(0, 212, 255, 0.35898109243697474) 99%
+  );
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#241d00",endColorstr="#00d4ff",GradientType=1);
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  border-radius: 10px;
+}
+.basket-icon {
+  font-size: 25px;
+}
+/* .main-nav{
+  wid
+} */
